Improve visibility of other sessions for group of selected session in schedule editor. Fixes #3219. Commit ready for merge.  - Legacy-Id: 19135

--- a/ietf/static/ietf/css/ietf.css
+++ b/ietf/static/ietf/css/ietf.css
@@ -1164,6 +1164,11 @@ a.fc-event, .fc-event, .fc-content, .fc-title, .fc-event-container {
 
 .edit-meeting-schedule .session.selected {
   cursor: grabbing;
+  outline: #0000ff solid 0.2em; /* blue, width matches margin on .session */
+}
+
+.edit-meeting-schedule .session.other-session-selected {
+  outline: #00008b solid 0.2em; /* darkblue, width matches margin on .session */
 }
 
 .edit-meeting-schedule .read-only .session.selected {
@@ -1186,6 +1191,7 @@ a.fc-event, .fc-event, .fc-content, .fc-title, .fc-event-container {
 }
 
 .edit-meeting-schedule .session.highlight {
+  outline-color: #ff8c00;  /* darkorange */
   background-color: #f3f3f3;
 }
 
@@ -1427,7 +1433,6 @@ a.fc-event, .fc-event, .fc-content, .fc-title, .fc-event-container {
   height: 19px;
   top: 0px;
   font-size: 13px;
-  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   cursor: pointer;
